manifests/utilities/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - image: homeassistant/home-assistant:latest
          name: home-assistant
          readinessProbe:
            httpGet:
              path: "/"
              port: 8123
            initialDelaySeconds: 5
          volumeMounts:
            - mountPath: /config
              name: home-assistant
      volumes:
        - name: home-assistant
          persistentVolumeClaim:
            claimName: home-assistant
