manifests/utilities/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
  - protocol: TCP
    name: http
    port: 8123
